// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SolvedWallapaper /> renders properly 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: linear-gradient(180deg,undefined 0%,undefined 100%);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100vh;
  left: 0;
  padding: 26px;
  position: fixed;
  top: 0;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  width: 100%;
  background-image: url("/cat-picture.jpg");
  background-size: cover;
  background-position: center center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  left: 0;
  opacity: 0;
  top: 0;
  -webkit-transition: opacity 1.2s ease;
  transition: opacity 1.2s ease;
}

.c0 > * {
  margin-bottom: 0px;
}

.c0 > img {
  margin-bottom: 16px;
}

.c0::before,
.c0::after {
  background: linear-gradient(180deg,rgba(0,0,0,1) 0%,rgba(0,0,0,0) 100%);
  content: '';
  height: 134px;
  left: 0;
  right: 0;
  position: absolute;
  top: 0;
  z-index: -1;
}

.c0::after {
  background: linear-gradient(0deg,rgba(0,0,0,1) 0%,rgba(0,0,0,0) 100%);
  bottom: 0;
  top: auto;
}

<SolvedWallpaper
  image="/cat-picture.jpg"
>
  <div
    className="c0"
  />
</SolvedWallpaper>
`;

exports[`<SolvedWallapaper /> show: true 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: linear-gradient(180deg,undefined 0%,undefined 100%);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100vh;
  left: 0;
  padding: 26px;
  position: fixed;
  top: 0;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  width: 100%;
  background-image: url("/cat-picture.jpg");
  background-size: cover;
  background-position: center center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  left: 0;
  opacity: 1;
  top: 0;
  -webkit-transition: opacity 1.2s ease;
  transition: opacity 1.2s ease;
}

.c0 > * {
  margin-bottom: 0px;
}

.c0 > img {
  margin-bottom: 16px;
}

.c0::before,
.c0::after {
  background: linear-gradient(180deg,rgba(0,0,0,1) 0%,rgba(0,0,0,0) 100%);
  content: '';
  height: 134px;
  left: 0;
  right: 0;
  position: absolute;
  top: 0;
  z-index: -1;
}

.c0::after {
  background: linear-gradient(0deg,rgba(0,0,0,1) 0%,rgba(0,0,0,0) 100%);
  bottom: 0;
  top: auto;
}

<SolvedWallpaper
  image="/cat-picture.jpg"
  show={true}
>
  <div
    className="c0"
  />
</SolvedWallpaper>
`;
